<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/itemSectionHeader_imageView"
        android:layout_width="31dp"
        android:layout_height="40dp"
        android:layout_marginLeft="6dp"
        android:src="@drawable/available"
        android:contentDescription="@string/bookNameImageView" />

    <TextView
        android:id="@+id/itemSectionHeader_textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="11dp"
        android:paddingLeft="7dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp"
        android:text="@string/someText" />

    <TextView
        android:id="@+id/itemSectionHeader_booksCount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalBooks"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
